5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4322/executions/1846_2604.log
== TEST (2019-06-26 13:02:59) 
-- CODE:
from numpy import *

matriz = array(eval(input("Pagamentos: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]

for i in range(linhas):
	print(max(matriz[i, :]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 13:03:22) 
-- CODE:
from numpy import *

matriz = array(eval(input("Pagamentos: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]

for i in range(linhas)
	print(max(matriz[i, :]))
-- EXECUTION TIME:
0.710293
-- ERROR:
  File "/home/codebench/codes/1846/2604/main.py", line 7
    for i in range(linhas)
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 13:03:38) 
-- CODE:
from numpy import *

matriz = array(eval(input("Pagamentos: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]

for i in range(linhas):
	print(max(matriz[i, :]))
-- EXECUTION TIME:
0.902035
-- TEST CASE 1:
---- input:
[[34.5,67.8,89.7,56.4,65.7,78.9,81.2],[99.9,67.8,87.6,45.4,12.3,45.5,23.7],[27.5,93.1,45.9,47.3,19.2,76.5,49.3]]
---- correct output:
89.7
99.9
93.1
---- user output:
89.7
99.9
93.1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
